[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemy/frog/frog.png" type="Texture" id=1]
[ext_resource path="res://enemy/frog/frog_leap.png" type="Texture" id=2]
[ext_resource path="res://enemy/frog/frog_dead.png" type="Texture" id=3]
[ext_resource path="res://Frog.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "frog dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "frog idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "frog leap",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29, 22 )

[node name="Frog" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "frog idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="WallChecker" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 2

[node name="TimerJump" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerJump" to="." method="_on_TimerJump_timeout"]
